Resolve review changes requested

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
     <!-- desktop navigation bar -->
     <div class="desktop-nav">
-        <a href="index.html" class="logo-home"> <img src="https://stephenkati.github.io/First-capstone-project/images/Global canvas logo.png" alt="Global Canvas Art Exhition concert logo"> </a>
+        <a href="index.html" class="logo-home"> <img src="./images/Global-canvas-logo.png" alt="Global Canvas Art Exhition concert logo"> </a>
         <ul>
             <li><a href="about.html"> About </a></li>
             <li><a href=""> Program </a></li>
@@ -72,7 +72,7 @@
             <p>
                The logo was chosen on January 30 because it symbolised all aspects of the concert in a minimalistic design.
             </p>
-           <img src="https://stephenkati.github.io/First-capstone-project/images/Global canvas logo.png" alt="Global Canvas art exhibition concert logo">
+           <img src="./images/Global-canvas-logo.png" alt="Global Canvas art exhibition concert logo">
         </div>
 
         <div class="past-concert">
@@ -97,8 +97,8 @@
 
         
     </div>
-    <div class="partner">
-        <h5 class="partner-title">Partner</h5>
+    <div class="partner-about">
+        <h5 class="partner-about-title">Partner</h5>
         <ul>
             <li>Google</li>
             <li>Amazon</li>
@@ -108,13 +108,22 @@
         </ul>
     </div>
 
-    <footer>
+    <footer class="about-footer">
         <div class="logo">
             <h5>Global Canvas Art Exhibition Concert</h5>
         </div>
         <div class="details">
             <p>2023 Global Canvas Art Exhibition Concert. Some Rights Reserved</p>
-            <p>Get ready to immerse yourself in the creative spirit of art and discover new perspectives and inspirations. Let's celebrate the power of creativity together!</p>
+        </div>
+    </footer>
+
+    <footer class="about-desk-footer">
+        <div class="logo">
+            <h5>Global Canvas Art Exhibition Concert</h5>
+        </div>
+        <div class="details">
+            <p>2023 Global Canvas Art Exhibition Concert. Some Rights Reserved</p>
+            <p >Get ready to immerse yourself in the creative spirit of art and discover new perspectives and inspirations. Let's celebrate the power of creativity together!</p>
         </div>
     </footer>
 
