--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- desktop navigation bar -->
         <div class="desktop-nav">
-            <a href="index.html" class="logo-home"> <img src="./images/Global canvas logo.png" alt="Global Canvas Art Exhition concert logo"> </a>
+            <a href="index.html" class="logo-home"> <img src="./images/Global-canvas-logo.png" alt="Global Canvas Art Exhition concert logo"> </a>
             <ul>
                 <li><a href="about.html"> About </a></li>
                 <li><a href=""> Program </a></li>
