--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="main-program">
             
 
-            <h3>Main Program</h3>
+            <h3 id="main-program">Main Program</h3>
             <div class="program-cards-layout">
                 <div class="program-card">
                     <i class="fa-regular fa-handshake"></i>
